<resources>
    <string name="app_name">Proyecto_Rastreo_GPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marco Sebastian Duran Gareca</string>
    <string name="nav_header_subtitle">seduran@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registrar">Registrar</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_reg_ubicacion">Reg. Ubicación</string>
    <string name="menu_listar_personas">Listar Personas</string>
    <string name="menu_buscar_persona">Buscar Persona</string>
    <string name="menu_ubicacion_personas">Ubicación Personas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>