<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto_rastreo_gps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto_rastreo_gps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto_rastreo_gps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_registrar"
        android:name="com.example.proyecto_rastreo_gps.ui.registrar.RegistrarFragment"
        android:label="@string/menu_registrar"
        tools:layout="@layout/fragment_registrar" />

    <fragment
        android:id="@+id/nav_modificar"
        android:name="com.example.proyecto_rastreo_gps.ui.modificar.ModificarFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_modificar" />

    <fragment
        android:id="@+id/nav_eliminar"
        android:name="com.example.proyecto_rastreo_gps.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />

    <fragment
        android:id="@+id/nav_reg_ubicacion"
        android:name="com.example.proyecto_rastreo_gps.ui.registrarUbicacion.RegistrarUbicacionFragment"
        android:label="@string/menu_reg_ubicacion"
        tools:layout="@layout/fragment_registrar_ubicacion" />

    <fragment
        android:id="@+id/nav_listar_personas"
        android:name="com.example.proyecto_rastreo_gps.ui.listar.ListarFragment"
        android:label="@string/menu_listar_personas"
        tools:layout="@layout/fragment_listar" />
</navigation>